--- a/index.html
+++ b/index.html
@@ -14,8 +14,4 @@
 </body>
 
 </html>
-<<<<<<< HEAD
-html gljdnca fndasg dsamngdas fansdfas sdigbifgbseg this is dev2
-=======
-html gljdnca fndasg dsamngdas fansdfas sdigbifgbseg this is dev1
->>>>>>> this is dev1 commit
+html gljdnca fndasg dsamngdas fansdfas sdigbifgbseg this is dev1 gsdgfioahifha
