--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@
 </body>
 
 </html>
-html gljdnca fndasg dsamngdas fansdfas sdigbifgbseg this is dev 1st commit
+html gljdnca fndasg dsamngdas fansdfas sdigbifgbseg this is master commit
