dev1 first commit

--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@
 </body>
 
 </html>
-html gljdnca fndasg dsamngdas fansdfas sdigbifgbseg this is devtest commit
+html gljdnca fndasg dsamngdas fansdfas sdigbifgbseg this is dev1 commit
