--- a/index.html
+++ b/index.html
@@ -7,10 +7,4 @@
     </body>
 
 </html>
-commit now this is master
-<div class="form-group">
-    <label for="my-select">Text</label>
-    <select id="my-select" class="custom-select" name="" multiple>
-        <option>Text</option>
-    </select>
-</div>
+commit now this is dev bracnh commit.
