this is master commit

--- a/index.html
+++ b/index.html
@@ -7,8 +7,4 @@
     </body>
 
 </html>
-<<<<<<< HEAD
-commit now this is master branch commit
-=======
-commit now this is test bracnh commit.
->>>>>>> 6f37f323f7f496c87e2fc077f87416b9d0d487fd
+HEAD commit now this is master branch commit=======c ommit now this is test bracnh commit.
