--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
     </body>
 
 </html>
-HEAD commit now this is master branch commit=======c ommit now this is test bracnh commit.
+this is dev branch commit
